bin/testsuite/tests/compiler/src/errors/compiler4968.swg
#global testerror "Err0308"

#test
{
    let x: ()
}